Fixed a minor alignment issue in footer

--- a/deals/footer-style.css
+++ b/deals/footer-style.css
@@ -36,6 +36,7 @@ body {
 }
 
 .footer__logo {
+  text-align: left;
   font-family: Lato, sans-serif;
   font-weight: 400;
   font-size: 1.5rem;
@@ -87,7 +88,7 @@ body {
 
 .footer__nav {
   display: flex;
-	flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .footer__nav > * {
@@ -109,7 +110,7 @@ body {
   flex-wrap: wrap;
   color: #999;
 }
-  
+
 .legal__links {
   display: flex;
   align-items: center;
@@ -129,15 +130,15 @@ body {
   .footer__nav > * {
     flex: 1;
   }
-  
+
   .nav__item--extra {
     flex-grow: 2;
   }
-  
+
   .footer__addr {
     flex: 1 0px;
   }
-  
+
   .footer__nav {
     flex: 2 0px;
   }
